[gd_scene load_steps=3 format=3 uid="uid://c4j2b8h6nf38r"]

[ext_resource type="Script" path="res://scenes/ui/recipes/text_highlight.gd" id="1_0y17k"]
[ext_resource type="Texture2D" uid="uid://rwphspld7vfp" path="res://assets/gfx/ui/crossed item.png" id="2_klyl2"]

[node name="text_highlight" type="ColorRect"]
mouse_default_cursor_shape = 2
color = Color(1, 1, 1, 0)
script = ExtResource("1_0y17k")

[node name="crossed" type="TextureRect" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_klyl2")

[connection signal="gui_input" from="." to="." method="_on_gui_input"]
[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
